sandc/test/fixtures/astRegression/shouldSucceed/productions/statement/PropertyHasBeenInitializedAssertion.sand
pub class PropertyHasBeenInitializedAssertion {
    foo() {
        a hasbeeninitialized;
    }

    foo() {
        a hasbeeninitialized;
        b hasbeeninitialized;
        c hasbeeninitialized;
    }
}