sandc/test/fixtures/astRegression/shouldFail/productions/parenthesizedExpression/MultipleExpressionsInParentheses.sand
pub class MultipleExpressionsInParentheses {
    foo() {
        (a, b)
    }
}